# Perfloc

./: .gitignore  Gemfile  _config.yml  about.markdown  index.markdown  readme.md
_layouts/: default.html
_parts/: part1.markdown  part2.markdown  part3.markdown
assets/css/: style.scss
collections/: CMakeLists.txt  vector.c  vector.h
collections/docs/: Untitled-2024-04-06-2303.excalidraw
collections/include/: vector.h
collections/src/: vector.c
memoryChunk/: memory_chunk.c  memory_chunk.h
memoryChunk/docs/: perfloc-architecture.excalidraw
memoryChunk/include/: memory_chunk.h
memoryChunk/src/: memory_chunk.c
memorychunk/: CMakeLists.txt
memorychunk/docs/: perfloc-architecture.excalidraw
memorychunk/include/: memory_chunk.h  perfloc.h  top_memory_chunk.h
memorychunk/src/: memory_chunk.c  perfloc.c  process_memory_chunk.c  top_memory_chunk.c  utils.c
src/collections/: CMakeLists.txt
src/collections/include/: vector.h
src/collections/src/: vector.c
src/memorychunk/: CMakeLists.txt
src/memorychunk/include/: top_memory_chunk.h  utils.h
src/memorychunk/src/: perfloc.c  process_memory_chunk.c  top_memory_chunk.c
src/tests/: CMakeLists.txt
src/tests/src/: test.c
tests/: CMakeLists.txt
tests/src/: test.c
